@@ -19,17 +19,16 @@
  */
 package com.webcodepro.applecommander.util.filestreamer;
 
-import static org.junit.Assert.assertEquals;
-
 import java.io.IOException;
-import java.util.Arrays;
-
-import org.junit.Test;
+import java.util.List;
 
 import com.webcodepro.applecommander.storage.Disk;
 import com.webcodepro.applecommander.storage.DiskException;
 import com.webcodepro.applecommander.storage.FileEntry;
 import com.webcodepro.applecommander.storage.FormattedDisk;
+import org.junit.jupiter.api.Test;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class FileTupleTest {
     @Test
@@ -42,7 +41,7 @@ public class FileTupleTest {
         FileEntry labelsSource = tuple.directoryEntry.getFiles().get(2);
         tuple = tuple.of(labelsSource);
         
-        assertEquals(Arrays.asList("SOURCEROR"), tuple.paths);
+        assertEquals(List.of("SOURCEROR"), tuple.paths);
         assertEquals(formattedDisk, tuple.formattedDisk);
         assertEquals(sourcerorDir, tuple.directoryEntry);
         assertEquals(labelsSource, tuple.fileEntry);
